made list options use enum
Signed-off-by: Erik Jan de Wit <erikjan.dewit@gmail.com>